api-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
