ui-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-api-service
  namespace: ui-namespace
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
